--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <header> <!--tab description-->
+    <head> <!--tab description-->
         <meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>4Geeks Academy Instagram Practice</title>
 		<link rel="stylesheet" href="styles.css" />
-    </header>
+    </head>
 
     <body>
-        <h1 class="topHeader">
+        <header class="topHeader">
             <strong>Breathe Code Photo Feed</strong>
-        </h1>
+        </header>
 
-        <div class="feed"> <!--for all feed to classify for style background of gray and such-->
+        <section class="feed"> <!--for all feed to classify for style background of gray and such-->
             <div> <!--feed 1 husky-->
                 <h1>
                     My first photo
@@ -70,6 +70,6 @@
                     </p>
                 </body>
             </div>
-        </div>
+        </section>
     </body>
 </html>
